Comment out unused styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.icon {
+/* .icon {
   transition: color 0.2s, transform 0.2s;
 }
 
 .icon:hover {
   color: theme("colors.secondaryColor");
   transform: scale(1.05);
-}
+} */
