Add Skills component, update Wrapper to allow skeved div effect

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,16 @@
   color: theme("colors.secondaryColor");
   transform: scale(1.05);
 } */
+/* 
+.skewed {
+  position: relative;
+  transform: skewY(-3deg);
+  height: 100px;
+  width: 100vw;
+}
+
+.skewed > * {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  transform: skewY(3deg);
+} */
